--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,24 @@
 spring:
   application:
     name: today-sentence
+
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://todaysentence.ch6iqok0yerv.ap-northeast-2.rds.amazonaws.com:3306/todaysentence
+#    url: jdbc:mariadb://localhost:13306/tripwhiz
+    username: todaysentence
+    password: todaysentence
+    hikari:
+      minimum-idle: 2
+      maximum-pool-size: 5
+      connection-timeout: 5000
+
+    jpa:
+      hibernate:
+        ddl-auto: update
+        dialect: org.hibernate.dialect.MariaDB103Dialect
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+
