--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
+
+    implementation 'com.h2database:h2'
+
 }
 
 tasks.named('test') {
