--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,17 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
+
+    implementation 'com.h2database:h2'
+
+    repositories {
+        mavenCentral() // Maven Central 저장소를 추가
+    }
+    dependencies {
+        implementation 'io.github.cdimascio:dotenv-java:2.2.4' // dotenv-java 라이브러리
+    }
 }
 
 tasks.named('test') {
