Chore: cd 파일 jar 파일 생성 확인 라인 추가

--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -16,7 +16,7 @@ jobs:
       EC2_USER: ubuntu
       EC2_IP: ec2-13-209-47-32.ap-northeast-2.compute.amazonaws.com
       JAR_FILE: build/libs/today-sentence-0.0.1-SNAPSHOT.jar
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'push' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -28,6 +28,18 @@ jobs:
           name: build-output-dev
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.TOKEN_GITHUB_ACTIONS }}
+
+      # JAR 파일 확인
+      - name: Verify JAR File in build/libs
+        run: |
+          echo "Checking if JAR file exists in build/libs..."
+          ls -al build/libs/ || echo "Directory 'build/libs/' does not exist!"
+          if [ -f build/libs/*.jar ]; then
+            echo "JAR file(s) found in build/libs/:"
+            ls build/libs/*.jar
+          else
+            echo "No JAR files found in build/libs/"
+          fi
 
       # 3. Create key.pem file
       - name: Create key.pem file
