Chore: cd 스크립트 오타 수정

--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -67,5 +67,5 @@ jobs:
           $REMOTE_PATH/$JAR_FILE \
           $EC2_USER \
           $EC2_IP \
-          key.pem \
+          key.pem
           EOF
