--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     dependencies {
         implementation 'io.github.cdimascio:dotenv-java:2.2.4' // dotenv-java 라이브러리
     }
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+
 }
 
 tasks.named('test') {
