--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,5 +21,10 @@ spring:
       hibernate:
         format_sql: true
 
+logging:
+  level:
+    org.hibernate.SQL: DEBUG  # Hibernate SQL 로깅 활성화
+    org.hibernate.type.descriptor.sql: TRACE  # 파라미터 바인딩 로깅 활성화
+
 server:
   port: 8080
