--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -1,5 +1,3 @@
-# dev 브랜치에 대한 CI 파이프라인 설정 파일
-
 name: dev-branch-ci
 
 on:
@@ -37,18 +35,26 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle
 
-      # 4. 프로젝트 빌드
+      # 4. 환경 변수 설정
+      - name: Export environment variables
+        run: |
+          echo "DB_URL=${{ secrets.DB_URL }}" >> $GITHUB_ENV
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
+
+      # 5. 프로젝트 빌드
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew clean build
         env:
           DB_URL: ${{ secrets.DB_URL }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
-      # 5. 테스트 실행
+      # 6. 테스트 실행
       - name: Run tests
         run: ./gradlew test
 
-      # 6. 빌드 결과물 저장
+      # 7. 빌드 결과물 저장
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
