--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,6 +12,11 @@ spring:
       max-lifetime: 1800000
       connection-test-query: SELECT 1
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -25,6 +30,9 @@ logging:
   level:
     org.hibernate.SQL: DEBUG  # Hibernate SQL 로깅 활성화
     org.hibernate.type.descriptor.sql: TRACE  # 파라미터 바인딩 로깅 활성화
+jwt:
+  secret:
+    key: ${JWT_SECRET_KEY}
 
 server:
   port: 8080
