--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,6 +74,12 @@ jobs:
         run: |
           mv *.jar app-artifact/  
 
+      - name: Docker 로그인
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+
       - name: Docker 이미지 빌드
         run: |
           docker build -f Dockerfile.prod -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROJECT_NAME }} .
