--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,6 +43,11 @@ jobs:
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
           JWT_SECRET: ${{ secrets.JWT_SECRET_KEY }}
 
+      - name: 환경변수 확인  
+        run: |
+          echo "DB_URL: $DB_URL"
+          echo "DB_USERNAME: $DB_USERNAME"
+          echo "DB_PASSWORD: $DB_PASSWORD"
 
       - name: Upload Artifacts
         if: github.ref == 'refs/heads/dev'
