--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,8 +15,10 @@
 
 logging:
   level:
+    root: DEBUG
     org.hibernate.SQL: DEBUG  # Hibernate SQL 로깅 활성화
     org.hibernate.type.descriptor.sql: TRACE  # 파라미터 바인딩 로깅 활성화
+
 
 
 server:
