--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,10 @@
     redis:
       host: redis
       port: 6379
-
+      
+  jackson:
+    time-zone: Asia/Seoul
+    
   jpa:
     hibernate:
       ddl-auto: update
