feat : dependency spring boot starter mail

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    //email
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+
 
 }
 
