--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,6 +58,7 @@ jobs:
         with:
           name: build-output-dev
           path: build/libs/*.jar
+          retention-days: 10  
 
   deploy:
     if: github.ref == 'refs/heads/dev'
