--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,13 +21,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-
       - name: JDK 설치
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-
 
       - name: Gradle 캐싱
         uses: actions/cache@v3
@@ -46,19 +44,16 @@ jobs:
       - name: Build
         run: ./gradlew build -x test
 
-      - name: 환경변수 확인
-        run: |
-          echo "DB_URL: $DB_URL"
-          echo "DB_USERNAME: $DB_USERNAME"
-          echo "DB_PASSWORD: $DB_PASSWORD [HIDDEN]"
-
-      - name: Upload Artifacts
-        if: github.ref == 'refs/heads/dev'
-        uses: actions/upload-artifact@v4
+      - name: Docker 로그인
+        uses: docker/login-action@v2
         with:
-          name: build-output-dev
-          path: build/libs/*.jar
-          retention-days: 10  
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+
+      - name: Docker 이미지 빌드 및 푸시
+        run: |
+          docker build -f Dockerfile.prod -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROJECT_NAME }} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROJECT_NAME }}
 
   deploy:
     if: github.ref == 'refs/heads/dev'
@@ -66,40 +61,6 @@ jobs:
     needs: ci
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-output-dev
-
-      - name: Debug Downloaded Artifacts
-        run: |
-          find . -type f
-
-      - name: Create app-artifact directory
-        run: |
-          mkdir -p app-artifact  
-
-      - name: Move JAR file to app-artifact
-        run: |
-          mv *.jar app-artifact/  
-
-      - name: Docker 로그인
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-
-      - name: Docker 이미지 빌드
-        run: |
-          docker build -f Dockerfile.prod -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROJECT_NAME }} .
-
-
-      - name: DockerHub 푸쉬
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROJECT_NAME }}
-
       - name: Run Docker Compose
         uses: appleboy/ssh-action@master
         with:
