--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,6 +1,5 @@
-FROM openjdk:17-jdk
+FROM openjdk:17-jdk-slim
 
-
-COPY ./app-artifact/*.jar /app/app.jar
+COPY build/libs/*.jar /app/app.jar
 
 CMD ["java", "-jar", "/app/app.jar"]
