--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,4 +2,4 @@ FROM openjdk:17-jdk-slim
 
 COPY build/libs/*.jar /app/app.jar
 
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["java", "-Duser.timezone=Asia/Seoul", "-jar", "/app/app.jar"]
