--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     //email
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+
 
 
 }
