fix : deploy #3 restore workflow...

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -69,15 +69,15 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /home/ubuntu
-            ./deploy.sh
-#            ls -l
-#            if [ -f "docker-compose.yml" ]; then
-#              echo "docker-compose.yml found. Proceeding..."
-#              sudo docker compose -f docker-compose.yml down
-#              sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROJECT_NAME }}
-#              sudo docker compose pull
-#              sudo docker compose -f docker-compose.yml up -d
-#            else
-#              echo "docker-compose.yml not found."
-#              exit 1
-#            fi
+#            ./deploy.sh
+            ls -l
+            if [ -f "docker-compose.yml" ]; then
+              echo "docker-compose.yml found. Proceeding..."
+              sudo docker compose -f docker-compose.yml down
+              sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROJECT_NAME }}
+              sudo docker compose pull
+              sudo docker compose -f docker-compose.yml up -d
+            else
+              echo "docker-compose.yml not found."
+              exit 1
+            fi
